--- a/networks/networks_test/LSTM_TEST.ipynb
+++ b/networks/networks_test/LSTM_TEST.ipynb
@@ -7,13 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Script for running the pre-trained network\n",
+    "\n",
     "# Importing the libraries\n",
     "import time\n",
     "\n",
     "# Logging the start time of code execution\n",
     "start_time = time.time()\n",
     "\n",
-    "import keras\n",
+    "import pickle\n",
     "import scikitplot as skplt\n",
     "\n",
     "import pandas as pd\n",
@@ -21,9 +23,6 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, LSTM\n",
     "\n",
     "from sklearn.metrics import plot_confusion_matrix\n",
     "\n",
@@ -38,17 +37,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6c0b9f5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reading the pickle file\n",
+    "with open('../../data/networks_pkl/lstm_model.pkl', 'rb') as file:\n",
+    "    model = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9ac0d423",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing the training datasets\n",
-    "inputs_training_df = pd.read_csv('../data/refined/inputs_training_df.csv')\n",
-    "outputs_training_df = pd.read_csv('../data/refined/outputs_training_df.csv')\n",
-    "\n",
     "# Importing the test datasets\n",
-    "inputs_test_df = pd.read_csv('../data/refined/inputs_test_df.csv')\n",
-    "outputs_test_df = pd.read_csv('../data/refined/outputs_test_df.csv')"
+    "inputs_test_df = pd.read_csv('../../data/refined/inputs_test_df.csv')\n",
+    "outputs_test_df = pd.read_csv('../../data/refined/outputs_test_df.csv')"
    ]
   },
   {
@@ -58,34 +65,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Converting the training dataframe into an array\n",
-    "input_training_array = np.array(inputs_training_df)\n",
-    "output_training_array = np.array(outputs_training_df)\n",
-    "\n",
     "# Converting the test dataframe into an array\n",
     "input_test_array = np.array(inputs_test_df)\n",
     "output_test_array = np.array(outputs_test_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "452d9ebe",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# Using under-sampling only to separate \"Não Grave\" and \"Grave\" accidents at opposite ends...\n",
-    "# which will facilitate the interpretation of only \"Grave\" accidents\n",
-    "rus = RandomUnderSampler(sampling_strategy = 'not minority')\n",
-    "x_res_test, y_res_test = rus.fit_resample(input_test_array, output_test_array)\n",
-    "\n",
-    "# To see the balance and distribution of the classes\n",
-    "print(pd.Series(y_res_test).value_counts())\n",
-    "\n",
-    "# Plotting the new class distribution\n",
-    "sns.countplot(y_res_test);"
    ]
   },
   {
@@ -98,61 +80,8 @@
    "outputs": [],
    "source": [
     "# Changing the dimension of the arrays to fit the requirements of LSTM\n",
-    "# Training\n",
-    "input_training_array = input_training_array.reshape(-1, 1, len(inputs_training_df.columns))\n",
-    "output_training_array = output_training_array.reshape(-1, 1, 1)\n",
-    "\n",
     "# Test\n",
-    "input_test_array = input_test_array.reshape(-1, 1, len(inputs_test_df.columns))\n",
-    "\n",
-    "# Interpretation\n",
-    "x_res_test = x_res_test.reshape(-1, 1, len(inputs_test_df.columns))\n",
-    "y_res_test = y_res_test.reshape(-1, 1, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b23c057e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Building the neural network\n",
-    "model = Sequential()\n",
-    "\n",
-    "model.add(LSTM(80, return_sequences = True, kernel_initializer = 'random_normal', input_shape = (1, len(inputs_training_df.columns))))\n",
-    "model.add(LSTM(80, return_sequences = False, kernel_initializer = 'random_normal'))\n",
-    "model.add(Dense(1, activation = 'sigmoid', kernel_initializer = 'random_normal'))\n",
-    "\n",
-    "model.compile(optimizer = 'Adam', loss = 'binary_crossentropy', metrics = 'accuracy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4ca3e49",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Training the neural network\n",
-    "r = model.fit(input_training_array, output_training_array, batch_size = 250, epochs = 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30d46f34",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# Plotting the loss graph\n",
-    "plt.plot(r.history['loss'], label = 'loss')\n",
-    "\n",
-    "plt.legend()"
+    "input_test_array = input_test_array.reshape(-1, 1, len(inputs_test_df.columns))"
    ]
   },
   {
