--- a/networks/networks_test/MLP_TEST.ipynb
+++ b/networks/networks_test/MLP_TEST.ipynb
@@ -3,10 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e9ff6e",
+   "id": "2bc8b8e5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Script for running the pre-trained network\n",
+    "\n",
     "# Importing the libraries\n",
     "import time\n",
     "import shap\n",
@@ -14,7 +16,7 @@
     "# Logging the start time of code execution\n",
     "start_time = time.time()\n",
     "\n",
-    "import keras\n",
+    "import pickle\n",
     "import scikitplot as skplt\n",
     "\n",
     "import pandas as pd\n",
@@ -22,9 +24,6 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, LSTM\n",
     "\n",
     "from sklearn.metrics import plot_confusion_matrix\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
@@ -41,30 +40,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac0d423",
+   "id": "68ddb18b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing the training datasets\n",
-    "inputs_training_df = pd.read_csv('../data/refined/inputs_training_df.csv')\n",
-    "outputs_training_df = pd.read_csv('../data/refined/outputs_training_df.csv')\n",
-    "\n",
-    "# Importing the test datasets\n",
-    "inputs_test_df = pd.read_csv('../data/refined/inputs_test_df.csv')\n",
-    "outputs_test_df = pd.read_csv('../data/refined/outputs_test_df.csv')"
+    "# Reading the pickle file\n",
+    "with open('../../data/networks_pkl/mlp_model.pkl', 'rb') as file:\n",
+    "    model = pickle.load(file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64373811",
+   "id": "ccaf2588",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Converting the training dataframe into an array\n",
-    "input_training_array = np.array(inputs_training_df)\n",
-    "output_training_array = np.array(outputs_training_df)\n",
-    "\n",
+    "# Importing the test datasets\n",
+    "inputs_test_df = pd.read_csv('../../data/refined/inputs_test_df.csv')\n",
+    "outputs_test_df = pd.read_csv('../../data/refined/outputs_test_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a6c534f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Converting the test dataframe into an array\n",
     "input_test_array = np.array(inputs_test_df)\n",
     "output_test_array = np.array(outputs_test_df)"
@@ -73,10 +76,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "452d9ebe",
-   "metadata": {
-    "scrolled": false
-   },
+   "id": "61c519c5",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Using under-sampling only to separate \"Não Grave\" and \"Grave\" accidents at opposite ends...\n",
@@ -94,52 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b23c057e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Building the neural network\n",
-    "model = Sequential()\n",
-    "\n",
-    "model.add(Dense(units = 80, activation = 'relu', kernel_initializer = 'random_normal', input_dim = len(inputs_training_df.columns)))\n",
-    "model.add(Dense(units = 80, activation = 'relu', kernel_initializer = 'random_normal'))\n",
-    "model.add(Dense(units = 1, activation = 'sigmoid', kernel_initializer = 'random_normal'))\n",
-    "\n",
-    "model.compile(optimizer = 'Adam', loss = 'binary_crossentropy', metrics = 'accuracy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4ca3e49",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# Training the neural network\n",
-    "r = model.fit(input_training_array, output_training_array, batch_size = 250, epochs = 17)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30d46f34",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# Plotting the loss graph\n",
-    "plt.plot(r.history['loss'], label = 'loss')\n",
-    "\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af5e69a7",
+   "id": "3beee5eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,10 +109,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49bcce50",
-   "metadata": {
-    "scrolled": false
-   },
+   "id": "41a63592",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plotting the confusion matrix\n",
@@ -178,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d5dabb3",
+   "id": "0defabcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa3d5b9f",
+   "id": "8b26ae43",
    "metadata": {
     "scrolled": true
    },
@@ -206,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdcbc6b6",
+   "id": "ef8f3580",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4c4f520",
+   "id": "0388f473",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e214b4",
+   "id": "e349ac6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48de5ca8",
+   "id": "6f46214e",
    "metadata": {},
    "outputs": [],
    "source": []
