--- a/networks/networks_training/LSTM_TRAINING.ipynb
+++ b/networks/networks_training/LSTM_TRAINING.ipynb
@@ -14,18 +14,15 @@
     "start_time = time.time()\n",
     "\n",
     "import keras\n",
-    "import scikitplot as skplt\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, LSTM\n",
     "\n",
+    "import pickle\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, LSTM\n",
-    "\n",
-    "from sklearn.metrics import plot_confusion_matrix\n",
     "\n",
     "# Suppressing warnings\n",
     "from warnings import simplefilter\n",
@@ -43,12 +40,8 @@
    "outputs": [],
    "source": [
     "# Importing the training datasets\n",
-    "inputs_training_df = pd.read_csv('../data/refined/inputs_training_df.csv')\n",
-    "outputs_training_df = pd.read_csv('../data/refined/outputs_training_df.csv')\n",
-    "\n",
-    "# Importing the test datasets\n",
-    "inputs_test_df = pd.read_csv('../data/refined/inputs_test_df.csv')\n",
-    "outputs_test_df = pd.read_csv('../data/refined/outputs_test_df.csv')"
+    "inputs_training_df = pd.read_csv('../../data/refined/inputs_training_df.csv')\n",
+    "outputs_training_df = pd.read_csv('../../data/refined/outputs_training_df.csv')"
    ]
   },
   {
@@ -60,32 +53,7 @@
    "source": [
     "# Converting the training dataframe into an array\n",
     "input_training_array = np.array(inputs_training_df)\n",
-    "output_training_array = np.array(outputs_training_df)\n",
-    "\n",
-    "# Converting the test dataframe into an array\n",
-    "input_test_array = np.array(inputs_test_df)\n",
-    "output_test_array = np.array(outputs_test_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "452d9ebe",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# Using under-sampling only to separate \"Não Grave\" and \"Grave\" accidents at opposite ends...\n",
-    "# which will facilitate the interpretation of only \"Grave\" accidents\n",
-    "rus = RandomUnderSampler(sampling_strategy = 'not minority')\n",
-    "x_res_test, y_res_test = rus.fit_resample(input_test_array, output_test_array)\n",
-    "\n",
-    "# To see the balance and distribution of the classes\n",
-    "print(pd.Series(y_res_test).value_counts())\n",
-    "\n",
-    "# Plotting the new class distribution\n",
-    "sns.countplot(y_res_test);"
+    "output_training_array = np.array(outputs_training_df)"
    ]
   },
   {
@@ -100,14 +68,7 @@
     "# Changing the dimension of the arrays to fit the requirements of LSTM\n",
     "# Training\n",
     "input_training_array = input_training_array.reshape(-1, 1, len(inputs_training_df.columns))\n",
-    "output_training_array = output_training_array.reshape(-1, 1, 1)\n",
-    "\n",
-    "# Test\n",
-    "input_test_array = input_test_array.reshape(-1, 1, len(inputs_test_df.columns))\n",
-    "\n",
-    "# Interpretation\n",
-    "x_res_test = x_res_test.reshape(-1, 1, len(inputs_test_df.columns))\n",
-    "y_res_test = y_res_test.reshape(-1, 1, 1)"
+    "output_training_array = output_training_array.reshape(-1, 1, 1)"
    ]
   },
   {
@@ -158,40 +119,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af5e69a7",
+   "id": "68d59a13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Running the network with test data\n",
-    "y_pred = model.predict(input_test_array)\n",
-    "\n",
-    "# Assigning True to values greater than 0.5 and False to values less than or equal to 0.5\n",
-    "y_pred = (y_pred > 0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49bcce50",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# Plotting the confusion matrix\n",
-    "# VN, FN\n",
-    "# FP, VP\n",
-    "# 0 == \"Não Grave\" / 1 == \"Grave\"\n",
-    "\n",
-    "labels = ['Não Grave', 'Grave']\n",
-    "\n",
-    "skplt.metrics.plot_confusion_matrix(output_test_array, y_pred)\n",
-    "\n",
-    "plt.xticks(ticks = [0, 1], labels = labels, size = 12)\n",
-    "plt.yticks(ticks = [0, 1], labels = labels, size = 12)\n",
-    "\n",
-    "plt.ylabel('True label', size = 13, labelpad = 15)\n",
-    "plt.xlabel('Predicted label', size = 13, labelpad = 15)"
+    "# Creating the pickle file\n",
+    "with open('../../data/networks_pkl/lstm_model.pkl', 'wb') as file:\n",
+    "    pickle.dump(model, file)"
    ]
   },
   {
