--- a/networks/networks_training/MLP_TRAINING.ipynb
+++ b/networks/networks_training/MLP_TRAINING.ipynb
@@ -14,18 +14,15 @@
     "start_time = time.time()\n",
     "\n",
     "import keras\n",
-    "import scikitplot as skplt\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
     "\n",
+    "import pickle\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, SimpleRNN\n",
-    "\n",
-    "from sklearn.metrics import plot_confusion_matrix\n",
     "\n",
     "# Suppressing warnings\n",
     "from warnings import simplefilter\n",
@@ -43,12 +40,8 @@
    "outputs": [],
    "source": [
     "# Importing the training datasets\n",
-    "inputs_training_df = pd.read_csv('../data/refined/inputs_training_df.csv')\n",
-    "outputs_training_df = pd.read_csv('../data/refined/outputs_training_df.csv')\n",
-    "\n",
-    "# Importing the test datasets\n",
-    "inputs_test_df = pd.read_csv('../data/refined/inputs_test_df.csv')\n",
-    "outputs_test_df = pd.read_csv('../data/refined/outputs_test_df.csv')"
+    "inputs_training_df = pd.read_csv('../../data/refined/inputs_training_df.csv')\n",
+    "outputs_training_df = pd.read_csv('../../data/refined/outputs_training_df.csv')"
    ]
   },
   {
@@ -60,29 +53,7 @@
    "source": [
     "# Converting the training dataframe into an array\n",
     "input_training_array = np.array(inputs_training_df)\n",
-    "output_training_array = np.array(outputs_training_df)\n",
-    "\n",
-    "# Converting the test dataframe into an array\n",
-    "input_test_array = np.array(inputs_test_df)\n",
-    "output_test_array = np.array(outputs_test_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "651ee01c",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Changing the dimension of the arrays to fit the requirements of LSTM\n",
-    "# Training\n",
-    "input_training_array = input_training_array.reshape(-1, 1, len(inputs_training_df.columns))\n",
-    "output_training_array = output_training_array.reshape(-1, 1, 1)\n",
-    "\n",
-    "# Test\n",
-    "input_test_array = input_test_array.reshape(-1, 1, len(inputs_test_df.columns))"
+    "output_training_array = np.array(outputs_training_df)"
    ]
   },
   {
@@ -92,11 +63,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Building the neural network\n",
     "model = Sequential()\n",
     "\n",
-    "model.add(SimpleRNN(80, return_sequences = True, kernel_initializer = 'random_normal', input_shape = (1, len(inputs_training_df.columns))))\n",
-    "model.add(SimpleRNN(80, return_sequences = False, kernel_initializer = 'random_normal'))\n",
-    "model.add(Dense(1, activation = 'sigmoid', kernel_initializer = 'random_normal'))\n",
+    "model.add(Dense(units = 80, activation = 'relu', kernel_initializer = 'random_normal', input_dim = len(inputs_training_df.columns)))\n",
+    "model.add(Dense(units = 80, activation = 'relu', kernel_initializer = 'random_normal'))\n",
+    "model.add(Dense(units = 1, activation = 'sigmoid', kernel_initializer = 'random_normal'))\n",
     "\n",
     "model.compile(optimizer = 'Adam', loss = 'binary_crossentropy', metrics = 'accuracy')"
    ]
@@ -106,12 +78,12 @@
    "execution_count": null,
    "id": "f4ca3e49",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "# Training the neural network\n",
-    "r = model.fit(input_training_array, output_training_array, batch_size = 250, epochs = 5)"
+    "r = model.fit(input_training_array, output_training_array, batch_size = 250, epochs = 18)"
    ]
   },
   {
@@ -132,46 +104,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af5e69a7",
+   "id": "3c41f3e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Running the network with test data\n",
-    "y_pred = model.predict(input_test_array)\n",
-    "\n",
-    "# Assigning True to values greater than 0.5 and False to values less than or equal to 0.5\n",
-    "y_pred = (y_pred > 0.5)"
+    "# Creating the pickle file\n",
+    "with open('../../data/networks_pkl/mlp_model.pkl', 'wb') as file:\n",
+    "    pickle.dump(model, file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49bcce50",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# Plotting the confusion matrix\n",
-    "# VN, FN\n",
-    "# FP, VP\n",
-    "# 0 == \"Não Grave\" / 1 == \"Grave\"\n",
-    "\n",
-    "labels = ['Não Grave', 'Grave']\n",
-    "\n",
-    "skplt.metrics.plot_confusion_matrix(output_test_array, y_pred)\n",
-    "\n",
-    "plt.xticks(ticks = [0, 1], labels = labels, size = 12)\n",
-    "plt.yticks(ticks = [0, 1], labels = labels, size = 12)\n",
-    "\n",
-    "plt.ylabel('True label', size = 13, labelpad = 15)\n",
-    "plt.xlabel('Predicted label', size = 13, labelpad = 15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f282b510",
+   "id": "b0e214b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e5c381c",
+   "id": "48de5ca8",
    "metadata": {},
    "outputs": [],
    "source": []
